connected grid refactoring, usemediaquery, background M opacity fix, adjacent project prev alignment

--- a/src/app/work/[slug]/page.module.scss
+++ b/src/app/work/[slug]/page.module.scss
@@ -152,7 +152,7 @@
   &.prev {
     h3 {
       padding-left: 150px;
-      text-align: end;
+      margin-left: auto;
     }
 
     .adjacentPostArrow {
